--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,6 @@
   "description": "Open Legislation.mt PDFs in new window",
   "version": "1.0",
   "action": {
-    "default_popup": "hello.html",
     "default_icon": "images/gavel.png"
   },
   "icons": {
@@ -13,12 +12,17 @@
     "48": "images/gavel.png",
     "128": "images/gavel.png"
   },
-  "content_scripts": [
-    {
-      "js": ["scripts/content.js"],
-      "matches": [
-        "https://legislation.mt/eli/*"
-      ]
+  "background" : {
+    "service_worker": "scripts/background.js",
+    "type": "module"
+  },
+  "permissions": ["activeTab", "scripting", "tabs"],
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Alt+P",
+        "mac": "Command+P"
+      }
     }
-  ]
+  }
 }
