--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "LegislationMT PDF Helper",
-  "description": "Open Legislation.mt PDFs in new window",
-  "version": "1.0",
+  "description": "Open Legislation.mt PDFs in new window via the extension button or ALT+P.",
+  "version": "1.1",
   "action": {
     "default_icon": "images/gavel.png"
   },
